Gazelle: minor code improvements